v2.6.8.1 fixed sidebar layout shift w testimonial

--- a/assets/css/src/_site.css
+++ b/assets/css/src/_site.css
@@ -1,3 +1,6 @@
+body {
+    width: 100vw;
+}
 .site {
 	margin: 0 auto 0;
 	background: #f7f7f7;
